<?xml version="1.0"?>
<package format="2">
  <name>ros_cpp_study_pkg</name>
  <version>0.0.3</version>
  <description>a mobile platform trace robot study package</description>

  <maintainer email="ikspurt0505@gmail.com">DonGikS</maintainer>
  <license>Apache License 2.0</license>
  <author email="ikspurt0505@gmail.com">DonGikS</author>
  <url type="repository">https://github.com/DonGikS/ros_study.git</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
